Cleanup for new domain

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,3 +5,9 @@ layout: default
 <content>
   {{ content }}
 </content>
+
+<hr>
+
+<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
+
+{% include notes_graph.html %}
