--- a/_includes/notes_graph.html
+++ b/_includes/notes_graph.html
@@ -1,12 +1,16 @@
 <style>
   .links line {
-    stroke: #ccc;
+    stroke: #3e3e3e;
     opacity: 0.5;
+  }
+    
+  .svg {
+    background-color: 
   }
 
   .nodes circle {
     cursor: pointer;
-    fill: #8b88e6;
+    fill: #3781ef;
     transition: all 0.15s ease-out;
   }
 
