--- a/_includes/notes_graph.html
+++ b/_includes/notes_graph.html
@@ -23,7 +23,7 @@
   .nodes [active],
   .text [active] {
     cursor: pointer;
-    fill: black;
+    fill: #ee6363;
   }
 
   .inactive {
@@ -46,7 +46,7 @@
   <script>
     const MINIMAL_NODE_SIZE = 4;
     const MAX_NODE_SIZE = 16;
-    const ACTIVE_RADIUS_FACTOR = 3;
+    const ACTIVE_RADIUS_FACTOR = 1.5;
     const STROKE = 1;
     const FONT_SIZE = 16;
     const TICKS = 200;
@@ -203,6 +203,8 @@
     let text = g.append("g").attr("class", "text").selectAll(".text");
 
     const resize = () => {
+        
+        
       if (d3.event) {
         const scale = d3.event.transform;
         zoomLevel = scale.k;
@@ -223,6 +225,8 @@
         .selectAll("circle")
         .filter((_d, i, nodes) => d3.select(nodes[i]).attr("active"))
         .attr("r", (d) => zoomOrKeep(ACTIVE_RADIUS_FACTOR * nodeSize[d.id]));
+      
+        
     };
 
     const ticked = () => {
@@ -272,17 +276,25 @@
 
       node.attr("active", (d) => isCurrentPath(d.path) ? true : null);
       text.attr("active", (d) => isCurrentPath(d.path) ? true : null);
+        
+      
 
       simulation.nodes(nodesData);
       simulation.force("link").links(linksData);
       simulation.alpha(1).restart();
       simulation.stop();
+        
 
       for (let i = 0; i < TICKS; i++) {
         simulation.tick();
       }
 
       ticked();
+        
+      active = svg.selectAll("circle").filter((_d, i, nodes) => d3.select(nodes[i]).attr("active"));
+        if (active) {
+            zoomHandler.translateTo(active,active.attr("cx"),active.attr("cy"));
+        }      
     };
 
     const zoomHandler = d3.zoom().scaleExtent([0.2, 3]).on("zoom", resize);
