Processed $10k, removed duplicated titles, intro for Terms of Services

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,2 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+<a class="internal-link" href="/about">TBD:About this digital garden</a>  <a class="internal-link" href="/termsofservice">Terms of Services</a>
+
