Simplest about me and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,15 @@
-<a class="internal-link" href="/about">TBD:About this digital garden</a>  <a class="internal-link" href="/termsofservice">Terms of Services</a>
+<div class="container-fluid text-center bg-light">
+    <div class="row">
+        <div class="col-md-4">
+          <a class="internal-link" href="/about">About me and my digital garden</a>
+        </div>
+        <div class="col-md-4">
+          <a class="internal-link" href="/termsofservice">Terms of Services</a>
+        </div>
+        <div class="col-md-4">
+          &nbsp;
+        </div>
+    </div>
+</div>    
+    
 
