--- a/_includes/link-previews.html
+++ b/_includes/link-previews.html
@@ -10,14 +10,15 @@
     padding: 1em;
     border: 1px solid #ddd;
     border-radius: 4px;
-    overflow: hidden;
+    overflow: scroll;
     position: absolute;
-    width: 400px;
-    height: 250px;
+    right: 0px;  
+    width: 500px;
+    height: 800px;
     font-size: 0.8em;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    /*box-shadow: 0 5px 10px rgba(0,0,0,0.1);*/
     opacity: 0;
-    transition: opacity 100ms;
+    /*transition: opacity 100ms;*/
   }
 
   #tooltip-wrapper:after {
@@ -27,7 +28,7 @@
 		bottom: 0;
 		left: 0;
 		pointer-events: none;
-		background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
+		/*background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);*/
 		width: 100%;
 		height: 75px;
   }
@@ -69,7 +70,7 @@
       iframe.src = event.target.href
       iframe.onload = function() {
         tooltipContentHtml = ''
-        tooltipContentHtml += '<div style="font-weight: bold;">' + iframe.contentWindow.document.querySelector('h1').innerHTML + '</div>'
+        //tooltipContentHtml += '<div style="font-weight: bold;">' + iframe.contentWindow.document.querySelector('h1').innerHTML + '</div>'
         tooltipContentHtml += iframe.contentWindow.document.querySelector('content').innerHTML
 
         tooltipContent.innerHTML = tooltipContentHtml
@@ -82,16 +83,20 @@
 
       tooltipWrapper.style.left = elem_props.left - (tooltipWrapper.offsetWidth / 2) + (elem_props.width / 2) + "px";
       if ((window.innerHeight - elem_props.top) < (tooltipWrapper.offsetHeight)) {
-          tooltipWrapper.style.top = elem_props.top + top - tooltipWrapper.offsetHeight - 10 + "px";
+          //tooltipWrapper.style.top = elem_props.top + top - tooltipWrapper.offsetHeight - 10 + "px";
+          tooltipWrapper.style.top = elem_props.top + top + 10 + "px";
       } else if ((window.innerHeight - elem_props.top) > (tooltipWrapper.offsetHeight)) {
-          tooltipWrapper.style.top = elem_props.top + top + 35 + "px";
+          tooltipWrapper.style.top = elem_props.top + top + 10 + "px";
       }
-
+      
       if ((elem_props.left + (elem_props.width / 2)) < (tooltipWrapper.offsetWidth / 2)) {
           tooltipWrapper.style.left = "10px";
       } else if ((document.body.clientWidth - elem_props.left - (elem_props.width / 2)) < (tooltipWrapper.offsetWidth / 2)) {
-          tooltipWrapper.style.left = document.body.clientWidth - tooltipWrapper.offsetWidth - 20 + "px";
+          //tooltipWrapper.style.left = document.body.clientWidth - tooltipWrapper.offsetWidth - 20 + "px";
+          tooltipWrapper.style.left = "10px";
       }
+      
+      
     }
   }
 
