include by me a coffee

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -14,6 +14,13 @@ layout: default
   <div id="notes-entry-container">
     <content>
       {{ content }}
+        
+    <div class="container d-inline-block bg-light" style="margin-left:0px;margin-top:50px">
+            
+               Enjoy this post? <a href='https://ko-fi.com/Y8Y1E99KS' target='_blank'><img height='36' class="d-inline" style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi1.png?v=3' border='0' alt='Buy me a Coffee at ko-fi.com' /></a>
+            
+    </div>
+    
     </content>
 
     <side style="font-size: 0.9em">
