Include Algolia Search + new articles

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,11 @@
 <div>
     <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
-    {% include search-lunr.html %}
+    <div id="configure"></div>
+    <div id="searchbox"></div>
+
+      <div id="hits">
+        
+      </div>
     
     
     
