--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,4 +61,11 @@
   gtag('config', 'G-XBQWFZTN6L');
 </script>
     
+    
+    
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/reset-min.css" integrity="sha256-t2ATOGCtAIZNnzER679jwcFcKYfLlw01gli6F6oszk8=" crossorigin="anonymous">
+
+    
+    
 </head>
