tuning for algolia search

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,6 +46,8 @@
       {{ page.title }} &mdash; {{ site.title }}
     {% endif %}
   </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.4.5/themes/satellite.css" crossorigin="anonymous">
+    
 <link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -64,7 +66,6 @@
     
     
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/reset-min.css" integrity="sha256-t2ATOGCtAIZNnzER679jwcFcKYfLlw01gli6F6oszk8=" crossorigin="anonymous">
 
     
     
