--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -1,3 +1,5 @@
+
+
 <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script>
 
@@ -27,9 +29,9 @@ const hitTemplate = function(hit) {
   const excerpt_html = hit.excerpt_html;    
 
   return `
-    <div class="post-item">
-      <h2><a class="post-link" href="${url}">${title}</a></h2>
-      <div class="post-snippet">${excerpt_html}</div>
+    <div class="al-post-item">
+      <h2 class="al-post-headline"><a class="al-post-link" href="${url}">${title}</a></h2>
+      <div class="al-post-snippet">${excerpt_html}</div>
     </div>
   `;
 }    
