--- a/css/style.scss
+++ b/css/style.scss
@@ -16,38 +16,25 @@ body {
   padding: 40px 15px;
 }
 
-
 .ais-search-box {
   max-width: 100%;
   margin-bottom: 15px;
 }
-.post-item {
-  margin-bottom: 30px;
+.al-post-item {
+  
 }
-.post-link .ais-Highlight {
+.al-post-link .ais-Highlight {
   color: #111;
   font-style: normal;
   text-decoration: underline;
 }
-.post-breadcrumbs {
-  color: #424242;
-  display: block;
-}
-.post-breadcrumb {
-  font-size: 18px;
-  color: #424242;
-}
-.post-breadcrumb .ais-Highlight {
-  font-weight: bold;
-  font-style: normal;
-}
-.post-snippet .ais-Highlight {
-  color: #2a7ae2;
-  font-style: normal;
-  font-weight: bold;
-}
-.post-snippet img {
-  display: none;
+
+.al-post-link {
+    font-size: 1.2rem;
 }
 
 
+.ais-Hits-item {
+    padding:0.5rem;
+    background:#fafafa;
+}
