change graph rendering

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,8 +31,8 @@ layout: default
         {{ content }}
      </content>
         
-     <p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
-     {% include notes_graph.html %}    
+     <div id="chartArea"></div>
+     {% include renderGraph.html %}    
     </div>        
   </div>
 </div> 
