--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -48,9 +48,8 @@ layout: default
 
 <hr>
 
-<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
-
-{% include notes_graph.html %}
+<div id="chartArea"></div>
+{% include renderGraph.html %}  
 
 
 
