--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -10,42 +10,50 @@ layout: default
       {% endif %}
     </time>
   </div>
-
-  <div id="notes-entry-container">
-    <content>
-      {{ content }}
-        
-    <div class="container d-inline-block bg-light" style="margin-left:0px;margin-top:50px">
-            
-               Enjoy this post? <a href='https://ko-fi.com/Y8Y1E99KS' target='_blank'><img height='36' class="d-inline" style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi1.png?v=3' border='0' alt='Buy me a Coffee at ko-fi.com' /></a>
-            
-    </div>
     
-    </content>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+        <content>
+          {{ content }}
 
-    <side style="font-size: 0.9em">
-      <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
-      {% if page.backlinks.size > 0 %}
-      <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
-      {% for backlink in page.backlinks %}
-        <div class="backlink-box">
-        <a class="internal-link" href="{{ site.baseurl }}{{ backlink.url }}{%- if site.use_html_extension -%}.html{%- endif -%}">{{ backlink.title }}</a><br>
-        <div style="font-size: 0.9em">{{ backlink.excerpt | strip_html | truncatewords: 20 }}</div>
-        </div>
-      {% endfor %}
-      </div>
-      {% else %}
+            <div class="container d-inline-block bg-light" style="margin-left:0px;margin-top:50px">
 
-      <div style="font-size: 0.9em">
-        <p>
-          There are no notes linking to this note.
-        </p>
-      </div>
-      {% endif %}
+                       Enjoy this post? <a href='https://ko-fi.com/Y8Y1E99KS' target='_blank'><img height='36' class="d-inline" style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi1.png?v=3' border='0' alt='Buy me a Coffee at ko-fi.com' /></a>
+
+            </div>
+
+        </content>
         
-        <div id="chartArea" style='display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);width:416px;height: 400px;margin-top: 10px;'></div>
-    </side>
+        
+    </div>
+    <div class="col-sm-4">
+        <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
+        {% if page.backlinks.size > 0 %}
+        <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
+            {% for backlink in page.backlinks %}
+            <div class="backlink-box">
+                <a class="internal-link" href="{{ site.baseurl }}{{ backlink.url }}{%- if site.use_html_extension -%}.html{%- endif -%}">{{ backlink.title }}</a><br>
+                <div style="font-size: 0.9em">{{ backlink.excerpt | strip_html | truncatewords: 20 }}</div>
+            </div>
+            {% endfor %}
+        </div>
+        {% else %}
+
+        <div style="font-size: 0.9em">
+            <p>
+              There are no notes linking to this note.
+            </p>
+        </div>
+        {% endif %}
+        
+        <div id="chartArea" style='display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);width:100%;height: 400px;margin-top: 10px;'></div>
+
+    </div>        
   </div>
+</div>     
+  
+  
 </article>
 
 <hr>
