--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,7 +31,7 @@ layout: default
         {{ content }}
      </content>
         
-     <div id="chartArea"></div>
+     <div id="chartArea" style='width:100%'></div>
      {% include renderGraph.html %}    
     </div>        
   </div>
