--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,9 +2,9 @@
     <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
     
     <div id="searchbox"></div>
-
+    <div id="brand-list"></div>
       <div id="hits">
-        
+
       </div>
     
     
