--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -28,6 +28,8 @@ layout: default
         
     </div>
     <div class="col-sm-4">
+        {% include maillist.html %}
+        
         <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
         {% if page.backlinks.size > 0 %}
         <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
