--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,6 +21,7 @@ layout: default
         {% endfor %}
         
         {{ "---" | markdownify }}
+        <div>nut 🌰 → seedling 🌱 → potted plant 🪴 → tree 🌳 → ancient tree 🍁 → fallen leaf 🍂</div>
         {{ "#### Pages" | markdownify }}
         {% for page in site.notes %}
         <a href="{{ site.url }}{{ page.url }}">{{ page.title }}
