extra functions for maturity and marks for note type

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -175,3 +175,14 @@ circle.nodecircleHighlighted {
     text-decoration: none;  
     border:none;
 }
+
+.small-note-type-letter{
+    font-size: 0.8rem;
+    color:lightslategray;
+    font-weight: lighter;
+    font-family: Monospace;  
+}
+
+.maturitySelecter {
+    text-decoration: none;     
+}
