--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<script>
+    function highlightByMaturity(classToHighlight){
+        jQuery(classToHighlight).css( "font-weight", "bold" );
+    }
+</script> 
+
 
 <div class="container">
   <div class="row">
@@ -21,32 +27,80 @@ layout: default
         {% endfor %}
         
         {{ "---" | markdownify }}
-        <div>nut 🌰 → seedling 🌱 → potted plant 🪴 → tree 🌳 → ancient tree 🍁 → fallen leaf 🍂</div>
+        <div><a href="javascript:highlightByMaturity('.nut');" class="maturitySelecter">nut 🌰</a> → <a href="javascript:highlightByMaturity('.seedling');" class="maturitySelecter">seedling 🌱</a> → <a href="javascript:highlightByMaturity('.plotted_plant');" class="maturitySelecter">potted plant 🪴</a> → <a href="javascript:highlightByMaturity('.tree');" class="maturitySelecter">tree 🌳</a> → <a href="javascript:highlightByMaturity('.ancient_tree');" class="maturitySelecter">ancient tree 🍁</a> → <a href="javascript:highlightByMaturity('.fallen_leaf');" class="maturitySelecter">fallen leaf 🍂</a></div>
         {{ "#### Pages" | markdownify }}
         {% for page in site.notes %}
-        <a href="{{ site.url }}{{ page.url }}">{{ page.title }}
+        {% assign epstatus = '' %}
+        {% assign note_type = '' %}
         {% for tag in  page.tags %}
         {% if tag == 'epstatus/0-🌰' %}
-        &nbsp;🌰  
+            {% assign epstatus = 'nut' %}
         {% endif %}  
         {% if tag == 'epstatus/1-🌱' %}
-            &nbsp;🌱
+            {% assign epstatus = 'seedling' %}
         {% endif %}  
         {% if tag == 'epstatus/2-🪴' %}
-            &nbsp;🪴 
+            {% assign epstatus = 'plotted_plant' %} 
         {% endif %}  
         {% if tag == 'epstatus/3-🌳' %}
-            &nbsp;🌳
+            {% assign epstatus = 'tree' %}
         {% endif %}
         {% if tag == 'epstatus/4-🍁' %}
-            &nbsp;🍁
+            {% assign epstatus = 'ancient_tree' %}
         {% endif %}  
         {% if tag == 'epstatus/5-🍂' %}
-            &nbsp;🍂
+            {% assign epstatus = 'fallen_leaf' %}
+        {% endif %} 
+        {% if tag == 'type/fleeting-note' %}
+            {% assign note_type = 'fleeting_note' %}
         {% endif %}  
+        {% if tag == 'type/index-note' %}
+            {% assign note_type = 'index_note' %}
+        {% endif %}  
+        {% if tag == 'type/literature-note' %}
+            {% assign note_type = 'literature_note' %}
+        {% endif %}  
+        {% if tag == 'type/permanent-note' %}
+            {% assign note_type = 'permanent_note' %}
+        {% endif %}
         {% endfor %}
         
-        </a><br>
+        <a href="{{ site.url }}{{ page.url }}" class="{{ epstatus }} {{ note_type }}">{{ page.title }}
+        {% if epstatus == 'nut' %}
+            &nbsp;🌰    
+        {% endif %}    
+        {% if epstatus == 'seedling' %}
+             &nbsp;🌱    
+        {% endif %}    
+        {% if epstatus == 'plotted_plant' %}
+            &nbsp;🪴     
+        {% endif %}                
+        {% if epstatus == 'tree' %}
+            &nbsp;🌳
+        {% endif %}    
+        {% if epstatus == 'ancient_tree' %}
+            &nbsp;🍁    
+        {% endif %}    
+        {% if epstatus == 'fallen_leaf' %}
+            &nbsp;🍂
+        {% endif %}        
+            
+        </a>
+        {% if note_type == 'fleeting_note' %}
+            <span class="small-note-type-letter">(F)</span>
+        {% endif %} 
+        {% if note_type == 'index_note' %}
+            <span class="small-note-type-letter">(I)</span>
+        {% endif %} 
+        {% if note_type == 'literature_note' %}
+            <span class="small-note-type-letter">(L)</span>
+        {% endif %} 
+        {% if note_type == 'permanent_note' %}
+            <span class="small-note-type-letter">(P)</span>
+        {% endif %} 
+        
+        
+        <br>
         {% endfor %}  
     </div>
     <div class="col-sm-8">
