--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -186,3 +186,8 @@ circle.nodecircleHighlighted {
 .maturitySelecter {
     text-decoration: none;     
 }
+
+.linkDisabled {
+    color:lightgray;
+}
+    
