--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,11 +48,12 @@
   </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.4.5/themes/satellite.css" crossorigin="anonymous">
     
-<link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
-    
+
+    <link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBQWFZTN6L"></script>
 <script>
@@ -64,7 +65,41 @@
 </script>
     
     
-    
+ <style>
+h1 {
+    color:#ff3b31;
+    font-size: 1.3em;
+    font-weight: 600;
+}
+h2 {
+    color:#ff9502;
+    font-size: 1.05em;
+    font-weight: 600;
+}
+h3 {
+    color:#ffcc00;
+    font-size: 1em;
+    font-weight: 500;
+}
+h4 {
+    color:#2acd41;
+    font-size: 0.9em;
+    font-weight: 500;
+    font-variant: small-caps;
+}
+h5 {
+    color:#027aff;
+    font-size: 0.85em;
+    font-weight: 500;
+    font-variant: small-caps;
+}
+h6 {
+    color:#b051de;
+    font-size: 0.85em;
+    font-weight: 400;
+    font-variant: small-caps;
+}    
+</style>   
     
 
     
