--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -4,7 +4,7 @@ layout: default
 
 <article>
         
-  <div>
+  <div style="font-size: 0.8em">
     {% for tag in  page.tags %}
         {% if tag == 'epstatus/0-🌰' %}
             <a href="../maturity-model-for-my-obsidian-notes#nut-" class="epstatus">🌰 (nut) | </a> 
