Fixed to responsive layout

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -17,7 +17,7 @@ body {
   color: $color-text;
   font-size: 1rem;
   max-width: 80em;
-  width: 80em;    
+  /*width: 80em; */   
   @media (min-width: 1000px) {
     font-size: 1.2rem;
   }
@@ -25,7 +25,7 @@ body {
 }
 
 main {
-  width: 80em;        
+  /*width: 80em;*/        
 }
 
 time {
