--- a/_sass/_bootstrap-grid.scss
+++ b/_sass/_bootstrap-grid.scss
@@ -5,17 +5,15 @@ $include-column-box-sizing: true !default;
 
 @import "bootstrap/functions";
 @import "bootstrap/variables";
+@import "bootstrap/variables-dark";
 @import "bootstrap/maps";
 
-@import "bootstrap/mixins/lists";
 @import "bootstrap/mixins/breakpoints";
 @import "bootstrap/mixins/container";
 @import "bootstrap/mixins/grid";
 @import "bootstrap/mixins/utilities";
 
 @import "bootstrap/vendor/rfs";
-
-@import "bootstrap/root";
 
 @import "bootstrap/containers";
 @import "bootstrap/grid";
