--- a/_sass/_bootstrap-utilities.scss
+++ b/_sass/_bootstrap-utilities.scss
@@ -1,10 +1,19 @@
 @import "bootstrap/mixins/banner";
-@include bsBanner(Reboot);
+@include bsBanner(Utilities);
 
+// Configuration
 @import "bootstrap/functions";
 @import "bootstrap/variables";
 @import "bootstrap/variables-dark";
 @import "bootstrap/maps";
 @import "bootstrap/mixins";
+@import "bootstrap/utilities";
+
+// Layout & components
 @import "bootstrap/root";
-@import "bootstrap/reboot";
+
+// Helpers
+@import "bootstrap/helpers";
+
+// Utilities
+@import "bootstrap/utilities/api";
