--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -117,6 +117,13 @@ layout: default
 
 </script>
 
+<script src="https://cdn.fastcomments.com/js/embed-v2.min.js"></script>
+<div id="fastcomments-widget"></div>
+<script>
+FastCommentsUI(document.getElementById('fastcomments-widget'), {
+    "tenantId": "Smart Learning"
+});
+</script>
 
 {% include renderGraph.html %}  
 
