Update Tenant ID

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -121,7 +121,7 @@ layout: default
 <div id="fastcomments-widget"></div>
 <script>
 FastCommentsUI(document.getElementById('fastcomments-widget'), {
-    "tenantId": "Smart Learning"
+    "tenantId": "v3szKi1NfpQh"
 });
 </script>
 
