--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -69,9 +69,10 @@ layout: default
         
     </div>
     <div class="col-sm-4">
-        {% include maillist.html %}
+        <script async data-uid="75968834d8" src="https://quintsmart.kit.com/75968834d8/index.js"></script>
         
-        <h4 style="margin-bottom: 1em">Notes mentioning this note</h4>
+        <h4 style="margin-bottom: 1em; margin-top: 2em">Notes mentioning this note</h4>
+        
         {% if page.backlinks.size > 0 %}
         <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
             {% for backlink in page.backlinks %}
