--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,20 +64,7 @@
   gtag('config', 'G-XBQWFZTN6L');
 </script>
  
-    <script>
-  (function (s, e, n, d, er) {
-    s['Sender'] = er;
-    s[er] = s[er] || function () {
-      (s[er].q = s[er].q || []).push(arguments)
-    }, s[er].l = 1 * new Date();
-    var a = e.createElement(n),
-        m = e.getElementsByTagName(n)[0];
-    a.async = 1;
-    a.src = d;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
-  sender('70866c46f02434')
-</script>
+    <script async data-uid="dde4e5befc" src="https://quintsmart.kit.com/dde4e5befc/index.js"></script>
     
     
  <style>
