Main rework of the digital garden layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,48 @@
-<div class="container-fluid text-center bg-light">
-    <div class="row">
-        <div class="col-md-4">
-          <a class="internal-link" href="/about">About me and my digital garden</a>
-        </div>
-        <div class="col-md-4">
-          <a class="internal-link" href="/termsofservice">Terms of Services</a>
-        </div>
-        <div class="col-md-4">
-          &nbsp;
-        </div>
-    </div>
-</div>
+<!-- Footer -->
+<footer class="footer-custom pt-5">
+  <div class="container pt-4">
+      <div class="row">
+          <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+              <h5 class="brand-text fs-4"><a href="https://quintsmart.com">QuintSmart</a></h5>
+              <p class="pe-lg-4">Empowering individuals and organizations to unlock their full learning potential through innovative methodologies and personalized guidance since March 2025.</p>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 mb-4 mb-lg-0">
+              <h5>Company</h5>
+              <ul class="list-unstyled">
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Our Story</a></li>
+              </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
+              <h5>Programs</h5>
+              <ul class="list-unstyled">
+                  <li><a href="https://program.quintsmart.com/transform-your-learning-in-9-weeks">9-Week Transformation</a></li>
+                  <li><a href="https://calendly.com/sebastian-kamilli/coffee-chat">Individual Coaching</a></li>
+              </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-4 mb-4 mb-lg-0">
+              <h5>Contact</h5>
+              <ul class="list-unstyled">
+                   <li><a href="mailto:team@quintsmart.com">team@quintsmart.com</a></li>
+                   <li>Germany</li>
+              </ul>
+          </div>
+      </div>
+  </div>
+  <div class="footer-bottom mt-4">
+      <div class="container d-flex flex-column flex-sm-row justify-content-between align-items-center py-3">
+          <div class="text-center text-sm-start">
+              <span>© 2025 QuintSmart. All rights reserved.</span>
+          </div>
+          <div class="text-center text-sm-end mt-2 mt-sm-0">
+              <a href="https://quintsmart.com/impressum" class="me-3">Impressum</a>
+              <a href="https://app.termly.io/policy-viewer/policy.html?policyUUID=66686ca7-7023-451c-9ead-b89a02224067" class="me-3">Privacy Policy</a>
+              <a href="https://app.termly.io/policy-viewer/policy.html?policyUUID=8f76f294-052e-489f-92dc-043a84db80ec" class="me-3">Terms of Service</a>
+              <a href="https://quintsmart.com/cookie-policy">Cookie Policy</a>
+          </div>
+      </div>
+  </div>
+</footer>
