--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,19 @@
-<div>
-    <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
-    
-    <div id="searchbox"></div>
-    <div id="brand-list"></div>
-      <div id="hits">
+<!-- Header & Navigation -->
+<header class="navbar navbar-expand-lg sticky-top border-bottom">
+  <div class="container">
+    <div class="brand-area">
+      <a class="navbar-brand fs-1 fw-bold" href="#"><img src="assets/LogoBig.svg" alt="Digital Garden Logo" width="50" height="50"> Digital Garden</a>
+    </div>
+      
 
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><h5><a class="nav-link" href="{{ site.baseurl }}/">Home</a></h5></li>
+              <!--<li class="nav-item"><h5><a class="nav-link" href="#">All Notes</a></h5></li> -->
+              <li class="nav-item"><h5><a class="nav-link" href="{{ site.baseurl }}/About.html">About</a></h5></li>
+              <li class="nav-item"><h5><a class="nav-link" href="https://pages.quintsmart.com/profile">Newsletter</a></h5></li>
+          </ul>
       </div>
-    
-    
-    
-</div>
+  </div>
+</header>
+
