--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -58,11 +58,7 @@ layout: default
         <content>
           {{ content }}
 
-            <div class="container d-inline-block bg-light" style="margin-left:0px;margin-top:50px">
-
-                       Enjoy this post? <a href='https://ko-fi.com/Y8Y1E99KS' target='_blank'><img height='36' class="d-inline" style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi1.png?v=3' border='0' alt='Buy me a Coffee at ko-fi.com' /></a>
-
-            </div>
+            <!-- TODO: add CTA-->
 
         </content>
         
