Small bug fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
           <div class="col-lg-2 col-md-4 col-6 mb-4 mb-lg-0">
               <h5>Company</h5>
               <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Our Story</a></li>
+                  <li><a href="https://quintsmart.com/">About Us</a></li>
+                  <li><a href="{{ site.baseurl }}/about">Our Story</a></li>
               </ul>
           </div>
 
