--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 <header class="navbar navbar-expand-lg sticky-top border-bottom">
   <div class="container">
     <div class="brand-area">
-      <a class="navbar-brand fs-1 fw-bold" href="#"><img src="assets/LogoBig.svg" alt="Digital Garden Logo" width="50" height="50"> Digital Garden</a>
+      <a class="navbar-brand fs-1 fw-bold" href="{{ site.baseurl }}/"><img src="assets/LogoBig.svg" alt="Digital Garden Logo" width="50" height="50"> Digital Garden</a>
     </div>
       
 
@@ -10,7 +10,7 @@
           <ul class="navbar-nav ms-auto">
               <li class="nav-item"><h5><a class="nav-link" href="{{ site.baseurl }}/">Home</a></h5></li>
               <!--<li class="nav-item"><h5><a class="nav-link" href="#">All Notes</a></h5></li> -->
-              <li class="nav-item"><h5><a class="nav-link" href="{{ site.baseurl }}/About.html">About</a></h5></li>
+              <li class="nav-item"><h5><a class="nav-link" href="{{ site.baseurl }}/about">About</a></h5></li>
               <li class="nav-item"><h5><a class="nav-link" href="https://pages.quintsmart.com/profile">Newsletter</a></h5></li>
           </ul>
       </div>
