--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,7 +63,25 @@
 
   gtag('config', 'G-XBQWFZTN6L');
 </script>
- 
+
+<!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '764005482684108');
+  fbq('init', '1437138850857956');
+  fbq('track', 'PageView');
+  </script>
+
+
+
+
     <script async data-uid="dde4e5befc" src="https://quintsmart.kit.com/dde4e5befc/index.js"></script>
     
     
